[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tno.mpc.encryption_schemes.templates"
description = "Generic templates for different types of Encryption Schemes"
readme = "README.md"
authors = [{name = "TNO MPC Lab", email = "mpclab@tno.nl"}]
maintainers = [{name = "TNO MPC Lab", email = "mpclab@tno.nl"}]
keywords = [
    "TNO",
    "MPC",
    "multi-party computation",
    "encryption schemes",
    "templates",
]
license = {text = "Apache License, Version 2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
    "Topic :: Security :: Cryptography",
]
urls = {Homepage = "https://mpc.tno.nl/", Documentation = "https://docs.mpc.tno.nl/encryption_schemes/templates/4.1.2", Source = "https://github.com/TNO-MPC/encryption_schemes.templates"}
dynamic = ["entry-points", "version"]
requires-python = ">=3.7"
dependencies = [
    "tenacity",
    "typing_extensions~=4.0; python_version<'3.11'",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-timeout",
]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
entry-points = {file = "entry_points.txt"}
version = {attr = "tno.mpc.encryption_schemes.templates.__version__"}

[tool.setuptools.package-data]
"*" = ["py.typed"]
"tno.mpc.encryption_schemes.templates" = ["test/**.txt"]

